--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
         <li class="nav-item">
         <a class="nav-link" style="color:#FF63B1" href="contact.html">Contact us</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" style="color:#FF63B1" href="signup.php">Sign Up</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" style="color:#FF63B1" href="login.php">Log In</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" style="color:#FF63B1" href="logout.php">Log Out</a>
-      </li>
     </ul>
+    <form action="signup.php" class="form-inline my-2 my-lg-0">
+      <button class="btn" style="background-color:#FF63B1;color:white;margin-right:16px" >Users</button>
+    </form>
+    <form action="csignup.php" class="form-inline my-2 my-lg-0">
+      <button class="btn" style="background-color:#FF63B1;color:white;margin-right:16px" >Company</button>
+    </form>
     <!--<form class="form-inline my-2 my-lg-0">
       <button style='margin-right:16px' type="button" class="btn btn-info" data-toggle="modal" data-target="#loginModal">Login</button>
       <button style='margin-right:16px' type="button" class="btn btn-info" data-toggle="modal" data-target="#signupModal">Sign Up</button>
